--- a/app/src/main/res/values/dimens.xml
+++ b/app/src/main/res/values/dimens.xml
@@ -4,4 +4,5 @@
     <dimen name="small_text_size">14sp</dimen>
     <dimen name="elevation_tool_bar">8dp</dimen>
     <dimen name="elevation_card">4dp</dimen>
+    <dimen name="normal_stroke">0.5dp</dimen>
 </resources>
